--- a/themes/bexar-hugo/layouts/Kontakt/list.html
+++ b/themes/bexar-hugo/layouts/Kontakt/list.html
@@ -27,7 +27,7 @@
         <div class="bg-white box-shadow text-center p-5 px-md-2 px-lg-5">
           <i class="fa fa-envelope text-primary icon-lg mb-4"></i>
           <h4 class="mb-4">{{ i18n "email" }}</h4>
-          <p>{{ .Site.Params.email | markdownify }}</p>
+          <p><a href="mailto:{{.Site.Params.email}}">{{ .Site.Params.email | markdownify }}</a></p>
         </div>
       </div>
     </div>
@@ -36,6 +36,7 @@
 {{ "<!-- /contact item -->" | safeHTML }}
 
 {{ "<!-- contact form and map -->" | safeHTML }}
+{{ if .Site.Params.contact.enable }}
 <section class="section">
   <div class="container">
     <div class="row">
@@ -80,6 +81,7 @@
     </div>
   </div>
 </section>
+{{ end }}
 {{ "<!-- /contact form and map -->" | safeHTML }}
 
 {{ end }}
