--- a/themes/bexar-hugo/layouts/Kontakt/list.html
+++ b/themes/bexar-hugo/layouts/Kontakt/list.html
@@ -36,16 +36,20 @@
 {{ "<!-- /contact item -->" | safeHTML }}
 
 {{ "<!-- contact form and map -->" | safeHTML }}
-{{ if .Site.Params.contact.enable }}
+
 <section class="section">
   <div class="container">
     <div class="row">
+      <iframe frameborder="0" height="450"
+        src="https://maps.google.de/maps?oe=utf-8&amp;client=firefox-a&amp;ie=UTF8&amp;q=sowatech+koblenz&amp;fb=1&amp;gl=de&amp;hq=sowatech&amp;hnear=0x47be7b5776237d9d:0x422d4d510dab360,Koblenz&amp;cid=0,0,1084405358890012249&amp;t=m&amp;iwloc=A&amp;ll=50.337076,7.589554&amp;spn=0.006295,0.006295&amp;output=embed"
+        style="border: 0px none;" width="100%"></iframe>
+
+      {{ if .Site.Params.contact.enable }}
       {{ "<!-- google map -->" | safeHTML }}
       {{ if .Site.Params.map.enable }}
       <div class="col-md-5 mb-5 mb-md-0">
         <div id="map_canvas" data-latitude="{{ .Site.Params.map.map_latitude }}"
-          data-longitude="{{ .Site.Params.map.map_longitude }}"
-          data-marker="{{ .Site.Params.map.map_marker | absURL }}"
+          data-longitude="{{ .Site.Params.map.map_longitude }}" data-marker="{{ .Site.Params.map.map_marker | absURL }}"
           data-marker-name="{{ .Site.Title }}">
         </div>
       </div>
@@ -78,10 +82,11 @@
           </div>
         </form>
       </div>
+      {{ end }}
     </div>
   </div>
 </section>
-{{ end }}
+
 {{ "<!-- /contact form and map -->" | safeHTML }}
 
 {{ end }}
