--- a/themes/bexar-hugo/layouts/index.html
+++ b/themes/bexar-hugo/layouts/index.html
@@ -41,7 +41,7 @@
       {{ range .feature_item }}
       {{ "<!-- feature item -->" | safeHTML }}
       <div class="col-lg-3 col-sm-6 mb-4 mb-lg-0">
-        <div class="bg-white py-5 px-4 text-center box-shadow banner-feature">
+        <div class="bg-white py-5 px-4 text-center box-shadow banner-feature height100">
           {{ with .icon }}
           <div class="icon-bg mb-4 water-wave">
             <i class="fa {{ . }} icon text-primary"></i>
