--- a/themes/bexar-hugo/layouts/partials/testimonial.html
+++ b/themes/bexar-hugo/layouts/partials/testimonial.html
@@ -15,7 +15,11 @@
           {{ range .testimonial_item }}
           {{ "<!-- slider-item -->" | safeHTML }}
           <div class="text-center">
+            {{ if (.hasalphachannel)}}
+            <img class="img-fluid mb-5 d-inline-block" src="{{ .client_image | absURL }}" alt="{{ .name }}">
+            {{ else}}
             <img class="img-fluid box-shadow rounded-circle mb-5 d-inline-block" src="{{ .client_image | absURL }}" alt="{{ .name }}">
+            {{ end }}
             <div class="bg-quote text-center pt-md-4">
               <p class="font-italic mb-5 h5 text-dark">{{ .content | markdownify }}</p>
               <h4>{{ .name }}</h4>
