--- a/themes/bexar-hugo/assets/css/custom.css
+++ b/themes/bexar-hugo/assets/css/custom.css
@@ -1,3 +1,8 @@
-.height100{
-    height: 100%;
+.drop-shadow {
+    filter: drop-shadow(0 15px 39px rgba(8,18,109,.1));
 }
+
+
+/*.test>div>div>div{
+    overflow: visible;
+}*/
