--- a/themes/bexar-hugo/layouts/service/single.html
+++ b/themes/bexar-hugo/layouts/service/single.html
@@ -9,7 +9,7 @@
       <aside class="col-lg-4">
         {{ "<!-- service list -->" | safeHTML }}
         <div class="bg-white px-4 py-5 box-shadow mb-5">
-          <h4 class="mb-4">Our Services</h4>
+          <h4 class="mb-4">{{ i18n "our_services"}}</h4>
           <ul class="list-styled style-circle">
             {{ range (where .Site.Pages "Type" "service") }}
             <li class="border-bottom border-color"><a href="{{ .Permalink }}"
