--- a/themes/bexar-hugo/layouts/_default/service.html
+++ b/themes/bexar-hugo/layouts/_default/service.html
@@ -4,6 +4,7 @@
     {{ with .Params.Icon}}<i class="card-icon fa {{. }}"></i>{{ end }}
     <h4 class="card-title"><a class="text-dark" href="{{ .Permalink }}">{{ .Title }}</a></h4>
     <p class="card-text">{{ .Summary }}</p>
-    <a href="{{ .Permalink }}" class="btn btn-secondary btn-arrow">{{ i18n "read_more" }}</a>
+    <br>
+    <a href="{{ .Permalink }}" class="btn btn-secondary btn-arrow position-absolute position-button-service">{{ i18n "read_more" }}</a>
   </div>
 </div>
