--- a/themes/bexar-hugo/assets/css/custom.css
+++ b/themes/bexar-hugo/assets/css/custom.css
@@ -7,6 +7,13 @@
     left: 20px;
 }
 
+@media only screen and (max-width:576px){
+.hero-slider h1{
+    font-size:15vw
+}
+}
+
+
 /*.shadow-fix>div>div>div{
     overflow: visible;
 }*/
